Add audio api support